# dataexec

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
dataexec/: '  __about__.py  __init__.py  assets.py  base.py  defaults.py  errors.py  executors.py  steps.py  tasks.py  types.py  utils.py  workflows.py
dataexec/ext/: docker.py
tests/: test_assets.py  test_steps.py  test_workflows.py  text_asset.txt
