[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataexec"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "nuxion", email = "nuxion@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"pydantic~=1.10.4"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/dataexec#readme"
Issues = "https://github.com/unknown/dataexec/issues"
Source = "https://github.com/unknown/dataexec"

[tool.hatch.version]
path = "dataexec/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "ipython",
  "pylint~=2.16.2",
  "isort~=5.12.0",
  "black~=23.1.0",
  "mypy~=1.0.1",
  "Sphinx~=5.3.0",
  "sphinx-autobuild",
  "sphinx-rtd-theme",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=dataexec {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "dataexec/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.isort]
profile = "black"

[tool.black]
line-length = 88
